@@ -34,6 +34,7 @@
 * adding env property serial.port.eventQueueSize to limit the size of the queue to hold generated serial port events before they are processed
 * Purge RX/TX buffers on serial port immediately after opening it
 * Event detector XID length expanded to 100 chars
+* Add subject property to Email Event Handler to allow setting a custom subject, if empty the subject will be created for you
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
